# applyflow

./: .env.example  README.md  manage.py  pyproject.toml
applications/: models.py  serializers.py  services.py  views.py
applications/migrations/: 0001_initial.py  0002_alter_company_country_alter_company_name.py
applications/tests/: test_services.py
applyflow/: asgi.py  settings.py  urls.py  wsgi.py
utils/: exceptions.py  models.py  services.py
