[project]
name = "applyflow"
version = "0.1.0"
description = "Track job applications and progress through stages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-rest-framework>=0.1.0",
    "drf-spectacular>=0.28.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
